--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
+    "pokemontcgsdk": "^2.0.0",
     "sequelize": "^6.7.0"
   }
 }
